[mqtt.homeassistant] I18n well known commands and states (#18443)
Signed-off-by: Cody Cutrer <cody@cutrer.us>