@@ -13,9 +13,11 @@
 package org.openhab.binding.mqtt.homeassistant.internal.component;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import javax.measure.quantity.Temperature;
 
@@ -66,6 +68,33 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
     private static final State ACTION_OFF_STATE = new StringType(ACTION_OFF);
     private static final List<String> ACTION_MODES = List.of(ACTION_OFF, "heating", "cooling", "drying", "idle", "fan");
 
+    private static final String FAN_MODE_AUTO = "auto";
+    private static final String FAN_MODE_LOW = "low";
+    private static final String FAN_MODE_MEDIUM = "medium";
+    private static final String FAN_MODE_HIGH = "high";
+
+    private static final Map<String, String> FAN_MODE_LABELS = Map.of(FAN_MODE_AUTO,
+            "@text/state.climate.fan-mode.auto", FAN_MODE_LOW, "@text/state.climate.fan-mode.low", FAN_MODE_MEDIUM,
+            "@text/state.climate.fan-mode.medium", FAN_MODE_HIGH, "@text/state.climate.fan-mode.high");
+
+    private static final String MODE_AUTO = "auto";
+    private static final String MODE_OFF = "off";
+    private static final String MODE_COOL = "cool";
+    private static final String MODE_HEAT = "heat";
+    private static final String MODE_DRY = "dry";
+    private static final String MODE_FAN_ONLY = "fan_only";
+
+    private static final Map<String, String> MODE_LABELS = Map.of(MODE_AUTO, "@text/state.climate.mode.auto", MODE_OFF,
+            "@text/state.climate.mode.off", MODE_COOL, "@text/state.climate.mode.cool", MODE_HEAT,
+            "@text/state.climate.mode.heat", MODE_DRY, "@text/state.climate.mode.dry", MODE_FAN_ONLY,
+            "@text/state.climate.mode.fan-only");
+
+    private static final String SWING_MODE_ON = "on";
+    private static final String SWING_MODE_OFF = "off";
+
+    private static final Map<String, String> SWING_MODE_LABELS = Map.of(SWING_MODE_ON,
+            "@text/state.climate.swing-mode.on", SWING_MODE_OFF, "@text/state.climate.swing-mode.off");
+
     /**
      * Configuration class for MQTT component
      */
@@ -114,7 +143,7 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
         @SerializedName("fan_mode_state_topic")
         protected @Nullable String fanModeStateTopic;
         @SerializedName("fan_modes")
-        protected List<String> fanModes = Arrays.asList("auto", "low", "medium", "high");
+        protected List<String> fanModes = List.of(FAN_MODE_AUTO, FAN_MODE_LOW, FAN_MODE_MEDIUM, FAN_MODE_HIGH);
 
         @SerializedName("hold_command_template")
         protected @Nullable String holdCommandTemplate;
@@ -136,7 +165,7 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
         protected @Nullable String modeStateTemplate;
         @SerializedName("mode_state_topic")
         protected @Nullable String modeStateTopic;
-        protected List<String> modes = Arrays.asList("auto", "off", "cool", "heat", "dry", "fan_only");
+        protected List<String> modes = List.of(MODE_AUTO, MODE_OFF, MODE_COOL, MODE_HEAT, MODE_DRY, MODE_FAN_ONLY);
 
         @SerializedName("preset_mode_command_template")
         protected @Nullable String presetModeCommandTemplate;
@@ -159,7 +188,7 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
         @SerializedName("swing_state_topic")
         protected @Nullable String swingStateTopic;
         @SerializedName("swing_modes")
-        protected List<String> swingModes = Arrays.asList("on", "off");
+        protected List<String> swingModes = List.of(SWING_MODE_ON, SWING_MODE_OFF);
 
         @SerializedName("target_humidity_command_template")
         protected @Nullable String targetHumidityCommandTemplate;
@@ -258,8 +287,10 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
                 channelConfiguration.currentTemperatureTemplate, channelConfiguration.currentTemperatureTopic,
                 commandFilter);
 
+        Map<String, String> modes = channelConfiguration.fanModes.stream()
+                .collect(Collectors.toMap(m -> m, m -> m, (a, b) -> a, LinkedHashMap::new));
         buildOptionalChannel(FAN_MODE_CH_ID, ComponentChannelType.STRING,
-                new TextValue(channelConfiguration.fanModes.toArray(new String[0])), updateListener,
+                new TextValue(modes, modes, FAN_MODE_LABELS, FAN_MODE_LABELS), updateListener,
                 channelConfiguration.fanModeCommandTemplate, channelConfiguration.fanModeCommandTopic,
                 channelConfiguration.fanModeStateTemplate, channelConfiguration.fanModeStateTopic, commandFilter);
 
@@ -271,8 +302,10 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
                     channelConfiguration.holdStateTemplate, channelConfiguration.holdStateTopic, commandFilter);
         }
 
+        modes = channelConfiguration.modes.stream()
+                .collect(Collectors.toMap(m -> m, m -> m, (a, b) -> a, LinkedHashMap::new));
         buildOptionalChannel(MODE_CH_ID, ComponentChannelType.STRING,
-                new TextValue(channelConfiguration.modes.toArray(new String[0])), updateListener,
+                new TextValue(modes, modes, MODE_LABELS, MODE_LABELS), updateListener,
                 channelConfiguration.modeCommandTemplate, channelConfiguration.modeCommandTopic,
                 channelConfiguration.modeStateTemplate, channelConfiguration.modeStateTopic, commandFilter);
 
@@ -281,8 +314,10 @@ public class Climate extends AbstractComponent<Climate.ChannelConfiguration> {
                 channelConfiguration.presetModeCommandTemplate, channelConfiguration.presetModeCommandTopic,
                 channelConfiguration.presetModeStateTemplate, channelConfiguration.presetModeStateTopic, commandFilter);
 
+        modes = channelConfiguration.swingModes.stream()
+                .collect(Collectors.toMap(m -> m, m -> m, (a, b) -> a, LinkedHashMap::new));
         buildOptionalChannel(SWING_CH_ID, ComponentChannelType.STRING,
-                new TextValue(channelConfiguration.swingModes.toArray(new String[0])), updateListener,
+                new TextValue(modes, modes, SWING_MODE_LABELS, SWING_MODE_LABELS), updateListener,
                 channelConfiguration.swingCommandTemplate, channelConfiguration.swingCommandTopic,
                 channelConfiguration.swingStateTemplate, channelConfiguration.swingStateTopic, commandFilter);
 
